[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Screens/Menus/MainMenu/MainMenu.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="StartButton" type="TouchScreenButton" parent="."]
position = Vector2( 287, 71 )
normal = ExtResource( 1 )

[node name="Options" type="TouchScreenButton" parent="."]
position = Vector2( 287, 143 )
normal = ExtResource( 1 )

[node name="Credits" type="TouchScreenButton" parent="."]
position = Vector2( 287, 217 )
normal = ExtResource( 1 )

[node name="Quit" type="TouchScreenButton" parent="."]
position = Vector2( 287, 281 )
scale = Vector2( 0.921875, 0.921875 )
normal = ExtResource( 1 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
